--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,8 +1,6 @@
-<p style="color: green"><%= notice %></p>
-
 <% content_for :title, "Messages" %>
 
-<h1>Messages</h1>
+<h3>Chat</h3>
 
 <div id="messages">
   <% @messages.each do |message| %>
