--- a/app/views/posts/_comment_icon.html.erb
+++ b/app/views/posts/_comment_icon.html.erb
@@ -3,6 +3,6 @@
                 method: :get, 
                 data: { turbo_frame: "comment-modal" }, 
                 class: "engagement-button-background" do %>
-    <i class="bi bi-chat"></i> <%= post.comments.count %>
+    <i class="bi bi-chat" title="Comment this Post."></i> <%= post.comments.count %>
   <% end %>
 </div>
