--- a/app/views/users/_upload_avatar_form.html.erb
+++ b/app/views/users/_upload_avatar_form.html.erb
@@ -5,7 +5,7 @@
                                         'upload-avatar-target': 'form'
                                      }) do %> 
   <label for="avatarInput" class="btn btn-outline">
-    <i class="bi bi-pencil-square" title="Change avatar"></i>
+    <i class="bi bi-pencil-square text-white" title="Change avatar"></i>
   </label>
   <%= file_field_tag :image, 
                   value: :image,
