--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,119 @@
 // Sassy
-@use "bulma";
 @import "bootstrap";
+@import "components/navbar.scss";
+@import "components/post.scss";
+@import "components/comment.scss";
+@import "components/profile.scss";
+@import "components/other-users.scss";
+@import "components/notifications.scss";
+@import "components/chat.scss";
+* {
+  /* Webkit browsers (Chrome, Safari, Edge) */
+    ::-webkit-scrollbar {
+      width: 3px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 10px;
+    }
+}
+
 
 form.button_to .engagement-button-background {
   background-color: unset;
   border: none;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  #toast {
+    position: fixed;
+    top: 50px;
+    width: fit-content;
+    align-self: center;
+  }
+  background-color: darkgrey;
+  color: white;
+
+  .flex-container {
+    display: flex;
+    justify-content: center;
+    width: 80vw;
+
+    a {
+      color: white;
+    }
+
+    header {
+      position: sticky;
+      top: 0;
+      height: 100vh;
+      margin-right: 5em;
+    }
+
+    main {
+      width: min-content;
+      border: 1px solid #505050;
+      width: 750px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      > * {
+        width: 100%;
+      }
+
+      .new-post {
+        border-bottom: 1px solid #505050;
+        padding: 2em 2em;
+        .form-footer {
+          display: flex;
+          justify-content: space-between;
+        }
+        div {
+          textarea {
+            color: white;
+            border: none;
+            width: 100%;
+            resize: none;
+          }
+          textarea:active,
+          textarea:focus {
+            outline: none;
+          }
+        }
+
+        .submit-button:disabled {
+          background-color: rgb(239, 243, 244);
+          border-color: rgba(0, 0, 0, 0);
+          color: rgb(15, 20, 25);
+          pointer-events: none;
+        }
+
+        .submit-button:enabled {
+          color: rgb(15, 20, 25);
+          opacity: var(--bs-btn-enabled-opacity);
+          border-color: rgba(0, 0, 0, 0);
+          background-color: rgb(239, 243, 244);
+        }
+
+        .submit-button:hover {
+          background-color: rgb(255, 255, 255);
+        }
+      }
+
+      .login-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20vh;
+      }
+
+    }
+  }
 }
 
 .post-preview-link {
@@ -12,12 +121,12 @@ form.button_to .engagement-button-background {
   color: unset;
 }
 
-.comments div {
-  border: 1px black solid;
+.post-preview time {
+  color: #A9A9A9;
 }
 
-.engagement-bar {
-  display: flex;
+.comments div {
+  border: 1px black solid;
 }
 
 .comment-modal-container {
@@ -31,11 +140,13 @@ form.button_to .engagement-button-background {
 }
 
 .modal-content {
-  background: white;
-  padding: 2rem;
+  background-color: inherit;
+  padding: 1.1rem;
   border-radius: 0.5rem;
   max-width: 500px;
   width: 100%;
+
+  
 }
 
 .cancel-button {
@@ -56,33 +167,31 @@ form.button_to .engagement-button-background {
 
 .username {
   text-decoration: none;
+  font-weight: 500;
 }
 
 .username:hover {
   text-decoration: underline;
 }
 
-.profile-page-username {
-
-}
-
-.post-partial-username {
-
-}
-
 .follow-button {
-  min-width: 80px;
+  width: 93px;
+  color: white;
+  border: 1px solid white;
+  background-color: transparent;
+  border-radius: 20px;
+  line-height: 2.3em;
+}
+
+.follow-button:hover {
+  text-decoration: underline;
 }
 
 button {
   transition: all 0.2s ease-in-out;
 }
 
-.user-item-request {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
+
 
 .request-action {
   display: inherit;
@@ -90,63 +199,14 @@ button {
 }
 
 .avatar img {
-  border-radius: 40px;
+  border-radius: 64px;
 }
 
-.timeline-post {
-  display: flex;
-  gap: 20px;
-}
 
-.timeline-post .avatar {
-  grid-column: 1 / -1;
-}
+.view-heading {
+  text-align: center;
+  border-bottom: 1px solid #505050;
+  padding: 1em;
 
-.notifications-container {
-  border: 1px solid grey;
-}
-
-.nav-button {
-  background-color: unset;
-  border: none;
-  position: relative;
-}
-
-.icon-size {
-  font-size: 1.65rem;
-}
-
-.nav-button span {
-  font-size: 0.9rem;
-  position: absolute;
-  right: 2px;
-}
-
-.conversation-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.conversation-container > .recipient-message {
-  align-self: flex-start;
-  background-color: lightgrey;
-}
-
-.conversation-container > .sender-message {
-  align-self: flex-end;
-  background-color: lightblue;
-}
-
-.chats-container {
-  display: flex;
-}
-
-.conversation-container {
-  height: 80vh;
-  overflow: auto
-}
-
-#message-input {
-  width: 60vw;
+  margin: 0;
 }
