--- a/app/views/devise/shared/_sign_out.html.erb
+++ b/app/views/devise/shared/_sign_out.html.erb
@@ -1,3 +1,3 @@
 <% if user_signed_in? %>
-  <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-danger rounded-pill px-3" %>
+  <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-danger rounded-pill px-3 ms-2" %>
 <% end %>
