--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,6 +1,6 @@
 <div class="notifications-container">
 
-  <div><h3>Notifications</h3></div>
+  <h3 class="view-heading">Notifications</h3>
 
   <div class="notifications-list">
 
