--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,7 @@
 <% content_for :title, "Posts" %>
+<%= render "form", post: @post %>
 <div id="posts">
   <% @posts.each do |post| %>
     <%= render partial: "post", locals: { post: post, user: current_user } %>
   <% end %>
 </div>
-
-<% if false %>
-  <div id="incoming-requests-sidebar">
-    <%= render "incoming_pending_requests", incoming_follow_requests: @incoming_follow_requests %>
-  </div>
-<% end %>
