--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,21 @@
-<div id="show-view-avatar" class="avatar show-user-avatar">
-  <%= render "user_avatar", user: @user %>
-</div>
-<div class="username profile-page-username">
-  <%= @user.username %>
-</div>
+<div class="user-show-view">
+  <div id="show-view-avatar" class="avatar show-user-avatar">
+    <%= render "user_avatar", user: @user %>
+  </div>
+  <div class="profile-page-username">
+    <%= @user.username %>
+  </div>
 
-<div id="follow-container-<%= @user.id %>" class="follow-button-container">
-  <%= render "follow_button", user: @user %>
-</div>
+  <% unless current_user.id == @user.id %>
+    <div id="follow-container-<%= @user.id %>" class="follow-button-container">
+      <%= render "follow_button", user: @user %>
+    </div>
+    <div class="message-button-container">
+      <%= render "message_button", chat: @chat, user: @user %>
+    </div>
+  <% end %>
 
-<div class="message-button-container">
-  <%= render "message_button", chat: @chat, user: @user %>
+  
 </div>
 
 
