--- a/app/assets/stylesheets/mailers.css
+++ b/app/assets/stylesheets/mailers.css
@@ -1,12 +1,17 @@
-body .welcome-mail-container {
+body {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+}
+body .welcome-mail-container {
+  display: flex;                                                        
   align-items: center;
   background-color: #edeff1;
   width: 66vw;
   max-width: 600px;
+  flex-direction: column;
+  align-items: center;
 }
 
 body .welcome-mail-container .header h2 {
   align-self: center;
-}
+}                                                               
